# docs/swagger.yaml
@@ -269,6 +269,36 @@ definitions:
         type: object
       metadata: {}
     type: object
+  server.SuccessResponse-array_data_Community:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/data.Community'
+        type: array
+      includes:
+        items: {}
+        type: array
+      links:
+        additionalProperties:
+          $ref: '#/definitions/server.Link'
+        type: object
+      metadata: {}
+    type: object
+  server.SuccessResponse-array_data_User:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/data.User'
+        type: array
+      includes:
+        items: {}
+        type: array
+      links:
+        additionalProperties:
+          $ref: '#/definitions/server.Link'
+        type: object
+      metadata: {}
+    type: object
   server.SuccessResponse-data_Community:
     properties:
       data:
@@ -391,6 +421,22 @@ paths:
       tags:
       - Internal
   /api/v1/communities:
+    get:
+      operationId: GetUserCommunities
+      produces:
+      - application/vnd.api+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/server.SuccessResponse-array_data_Community'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.ErrorResponse-server_GenericError'
+      summary: Retrieves the Communities that a User has access to
+      tags:
+      - Communities
     post:
       consumes:
       - application/json
@@ -414,7 +460,7 @@ paths:
       summary: Creates a new Community
       tags:
       - Communities
-  /api/v1/messages/groups:
+  /api/v1/communities/{id}:
     get:
       operationId: GetUserCommunityById
       produces:
@@ -431,6 +477,40 @@ paths:
       summary: Retrieves the Community of a given ID
       tags:
       - Communities
+  /api/v1/communities/{id}/members:
+    get:
+      operationId: GetCommunityMembers
+      produces:
+      - application/vnd.api+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/server.SuccessResponse-array_data_User'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.ErrorResponse-server_GenericError'
+      summary: Retrieves the Community of a given ID
+      tags:
+      - Communities
+  /api/v1/messages/groups:
+    get:
+      operationId: GetUserMessageGroups
+      produces:
+      - application/vnd.api+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/server.SuccessResponse-server_GetGroupsResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.ErrorResponse-server_GenericError'
+      summary: Retrieves the Message Groups that a User has access to
+      tags:
+      - Messages
     post:
       consumes:
       - application/json
